Updated Lesson Two

--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -2,20 +2,73 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title></title>
-        <meta name="description"
-        content="~155 characters summarizing with keywords the page content - on page SEO"/>
-
+        <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0">
+        <title>Lesson 2 Design Principles Document</title>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/small.css" />
         <link rel="stylesheet" href="css/medium.css" />
         <link rel="stylesheet" href="css/large.css" />
     </head>
     <body>
-        <header></header>
-        <nav></nav>
-        <main></main>
-        <footer></footer>
-        <script src=""></script>
+        <header>
+            <h2>Design Principles Doc</h2>
+            <h1>Logan Pierce</h1>
+        </header>
+        <nav>
+
+        </nav>
+        <main>
+            <section>
+                <h4>Harvard Art Museums</h4>
+                <h3>White Space and Clean Design</h3>
+                <a href="https://www.harvardartmuseums.org/">harvardartmuseums.org</a>
+                <img src="images/harvardartmuseums.jpg" alt="Harvard Art Museums">
+                <p>
+                "The clean design acts as the perfect backdrop 
+                for the art, which stands out in sharp contrast 
+                against the white space. The titles and descriptions 
+                of the various pieces don’t have any sort of border, 
+                which prevents them from competing with the art for attention."
+                </p>
+            </section>
+            <section>
+                <h4>Harvard Art Museums</h4>
+                <h3>White Space and Clean Design</h3>
+                <a href="https://www.harvardartmuseums.org/">harvardartmuseums.org</a>
+                <img src="images/harvardartmuseums.jpg" alt="Harvard Art Museums">
+                <p>
+                "The clean design acts as the perfect backdrop 
+                for the art, which stands out in sharp contrast 
+                against the white space. The titles and descriptions 
+                of the various pieces don’t have any sort of border, 
+                which prevents them from competing with the art for attention."
+                </p>
+            </section>
+            <section>
+                <h4>Harvard Art Museums</h4>
+                <h3>White Space and Clean Design</h3>
+                <a href="https://www.harvardartmuseums.org/">harvardartmuseums.org</a>
+                <img src="images/harvardartmuseums.jpg" alt="Harvard Art Museums">
+                <p>
+                "The clean design acts as the perfect backdrop 
+                for the art, which stands out in sharp contrast 
+                against the white space. The titles and descriptions 
+                of the various pieces don’t have any sort of border, 
+                which prevents them from competing with the art for attention."
+                </p>
+            </section>
+
+        </main>
+        <footer>
+            <p class="first">
+                &copy; 2020 | Logan Pierce | Texas | <a href="http://www.byui.edu/online">BYU-Idaho Online Learning.</a>
+                </p>
+                <p class="second">
+                Last Updated: <span id="modifiedTime"></span>
+                </p>
+
+        </footer>
+        <script src="../Tienut73.github.io/js/main.js"></script>
     </body>
 </html>
