--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -33,29 +33,27 @@
                 </p>
             </section>
             <section>
-                <h4>Harvard Art Museums</h4>
-                <h3>White Space and Clean Design</h3>
-                <a href="https://www.harvardartmuseums.org/">harvardartmuseums.org</a>
-                <img src="images/harvardartmuseums.jpg" alt="Harvard Art Museums">
+                <h4>Amazon</h4>
+                <h3>Visual Hierarchy</h3>
+                <a href="https://www.amazon.com//">amazon.com</a>
+                <img src="images/amazon.jpg" alt="Amazon">
                 <p>
-                "The clean design acts as the perfect backdrop 
-                for the art, which stands out in sharp contrast 
-                against the white space. The titles and descriptions 
-                of the various pieces don’t have any sort of border, 
-                which prevents them from competing with the art for attention."
+                "The bar at the top automatically switches rapidly between various promotions. The grabs attention immediately.
+                The Amazon blog post takes up the most space, so the eyes are then drawn to that, before looking down to their response post.
+                The advertisement for the truck is smallest, so it’s the last thing noticed.
+                "
                 </p>
             </section>
             <section>
-                <h4>Harvard Art Museums</h4>
-                <h3>White Space and Clean Design</h3>
-                <a href="https://www.harvardartmuseums.org/">harvardartmuseums.org</a>
-                <img src="images/harvardartmuseums.jpg" alt="Harvard Art Museums">
+                <h4>EDHREC</h4>
+                <h3>Hick's Law</h3>
+                <a href="https://edhrec.com//">edhrec.com/</a>
+                <img src="images/edhrec.jpg" alt="EDHREC">
                 <p>
-                "The clean design acts as the perfect backdrop 
-                for the art, which stands out in sharp contrast 
-                against the white space. The titles and descriptions 
-                of the various pieces don’t have any sort of border, 
-                which prevents them from competing with the art for attention."
+                "Hick's Law is about not overwhelming the user by 
+                breaking down complex elements into more simple steps.
+                EDHREC catalogs various lists and seperates them by theme 
+                and other catetories. This helps the user to more easily find what they want."
                 </p>
             </section>
 
