--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -22,8 +22,8 @@
             <section>
                 <h4>Harvard Art Museums</h4>
                 <h3>White Space and Clean Design</h3>
-                <a href="https://www.harvardartmuseums.org/">harvardartmuseums.org</a>
                 <img src="images/harvardartmuseums.jpg" alt="Harvard Art Museums">
+                <a class="links" href="https://www.harvardartmuseums.org/">harvardartmuseums.org</a>
                 <p>
                 "The clean design acts as the perfect backdrop 
                 for the art, which stands out in sharp contrast 
@@ -37,6 +37,8 @@
                 <h3>Visual Hierarchy</h3>
                 <a href="https://www.amazon.com//">amazon.com</a>
                 <img src="images/amazon.jpg" alt="Amazon">
+                <a class="links" href="https://www.amazon.com//">amazon.com</a>
+
                 <p>
                 "The bar at the top automatically switches rapidly between various promotions. The grabs attention immediately.
                 The Amazon blog post takes up the most space, so the eyes are then drawn to that, before looking down to their response post.
@@ -47,8 +49,9 @@
             <section>
                 <h4>EDHREC</h4>
                 <h3>Hick's Law</h3>
-                <a href="https://edhrec.com//">edhrec.com/</a>
                 <img src="images/edhrec.jpg" alt="EDHREC">
+                <a class="links" href="https://edhrec.com//">edhrec.com/</a>
+
                 <p>
                 "Hick's Law is about not overwhelming the user by 
                 breaking down complex elements into more simple steps.
@@ -60,7 +63,7 @@
         </main>
         <footer>
             <p class="first">
-                &copy; 2020 | Logan Pierce | Texas | <a href="http://www.byui.edu/online">BYU-Idaho Online Learning.</a>
+                &copy; 2020 | Logan Pierce | Texas | <a class="links" href="http://www.byui.edu/online">BYU-Idaho Online Learning.</a>
                 </p>
                 <p class="second">
                 Last Updated: <span id="modifiedTime"></span>
