--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -62,7 +62,7 @@
         </main>
         <footer>
             <p class="first">
-                &copy; 2020 | Logan Pierce | Texas | <a href="http://www.byui.edu/online">BYU-Idaho Online Learning.</a>
+                &copy; 2020 | Logan Pierce | Texas | <a class="links" href="http://www.byui.edu/online">BYU-Idaho Online Learning.</a>
                 </p>
                 <p class="second">
                 Last Updated: <span id="modifiedTime"></span>
