--- a/WDDAssignments/Assignment3/index.html
+++ b/WDDAssignments/Assignment3/index.html
@@ -7,10 +7,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1"> 
 <meta name="author" content="Logan Pierce">
 <meta name="description" content="Weather Wizard gives forecasts for Franklin, Greenville and Springfield.">
-<link rel="stylesheet" type="text/css" href="css/small.css">
-<link rel="stylesheet" type="text/css" href="css/medium.css">
-<link rel="stylesheet" type="text/css" href="css/large.css">
-<link rel="stylesheet" type="text/css" href="css/normalize.css">
+<link rel="stylesheet" type="text/css" href="../Assignment3/css/normalize.css">
+<link rel="stylesheet" type="text/css" href="../Assignment3/css/small.css">
+<link rel="stylesheet" type="text/css" href="../Assignment3/css/medium.css">
+<link rel="stylesheet" type="text/css" href="../Assignment3/css/large.css">
 <style>
     .flex-container {
         display: flex;
