--- a/WDDAssignments/Assignment3/color-scheme.html
+++ b/WDDAssignments/Assignment3/color-scheme.html
@@ -91,7 +91,7 @@ li a:hover {
           
     <div class="item1"></div>
     <h1>Color Scheme</h1>
-        <p>White background, with Green and Blue accents.</p>
+        <p>White background, with Light Blue accents.</p>
             </div>
           
 <section class="forecast">
