--- a/WDDAssignments/Assignment3/index.html
+++ b/WDDAssignments/Assignment3/index.html
@@ -90,8 +90,13 @@ li a:hover {
       <div class="wrapper">
           
     <div class="item1"></div>
-    <h1>Weather Report</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed feugiat sagittis vestibulum. Donec maximus interdum diam eget fringilla. Duis a lobortis ante. Sed condimentum felis sed mollis maximus.Sed feugiat sagittis vestibulum.Donec maximus interdum diam eget fringilla. Duis a lobortis ante. Sed condimentum felis sed mollis maximus.</p>
+    <h1>Purpose</h1>
+        <p>Provide weather infomation for the surrounding area and help families and outdoor enthusiats plan their activities.</p>
+        <p>Domain Name: Weatherwizard.com</p>
+        <p>Logo:</p>
+        <figure class="logo">
+            <img src="images/stormCloud.png" alt="Weather Logo">
+                </figure></a>
             </div>
           
   <div class="item2">
