--- a/WDDAssignments/lesson4/preston-4.html
+++ b/WDDAssignments/lesson4/preston-4.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" type="text/css" href="../lesson4/css/medium.css">
         <link rel="stylesheet" type="text/css" href="../lesson4/css/large.css">
     </head>
-    <body cz-shortcut-listen="true">
+    <body class="vsc initalized">
         <header class="clearfix"><a href="../lesson4/preston-4.html">
             <figure class="logo">
             <img src="../lesson4/images/stormCloud.png" alt="logo">
@@ -42,19 +42,32 @@
             </ul>
         </nav>
         <main>
+          <section class="section1">
             <h2>Preston Idaho</h2>
+            <div class="contentLinks">
             <div class="contentbox">Hero w/ weather summary</div>
-            <div class="contentbox forecast">5 Day Forecast</div>
+            <div class="contentbox">5 Day Forecast</div>
             <div class="contentbox">Article</div>
             <div class="contentbox">Contact Information</div>
+          </div>
+          </section>
+          <section class="section2">
+            <h2>5 Day Forecast</h2>
+          </section>
+          <section class="section3">
+            <h2>Article</h2>
+          </section>
+          <section class="section4">
+            <h2>Contact Information</h2>
+          </section>
         </main>
         <footer>
             <p>
-             " &copy; Weather Wizard | Logan Pierce "
+             " &copy; Weather Wizard | Logan Pierce | Texas"
              <span id="currentdate"></span>
             </p>
         </footer>
-        <script src="../lesson4/js/script.js"></script>
+        <script src="../lesson4/js/currentdate.js"></script>
     </body>
     <loom-container id="lo-engage-ext-container"></loom-container>
 </html>
