updated date js

--- a/WDDAssignments/Assignment3/index.html
+++ b/WDDAssignments/Assignment3/index.html
@@ -28,7 +28,7 @@ ul {
     margin: 0;
     padding: 0;
     overflow:hidden;
-    background-color: #333;
+    background-color: rgb(26, 250, 26)
 }
 
 li {
@@ -82,7 +82,7 @@ li a:hover {
         <li><a href="index.html">Home</a></li>
     	<li><a href="target-audience.html">Target Audience</a></li>
     	<li><a href="color-scheme.html">Color Scheme</a></li>
-    	<li><a href="typography.html">Springfield</a></li>
+    	<li><a href="typography.html">Typography</a></li>
             </ul>		
   </nav>
     
