--- a/WDDAssignments/lesson4/preston-4.html
+++ b/WDDAssignments/lesson4/preston-4.html
@@ -63,11 +63,12 @@
         </main>
         <footer>
             <p>
-             " &copy; Weather Wizard | Logan Pierce | Texas"
-             <span id="currentdate"></span>
-                    <script src="../lesson4/js/currentdate.js"></script>
+             " &copy; 2020 | Weather Wizard | Logan Pierce | Texas"
+             <span id="currentdate">Saturday, 16 May 2020
+             </span>
                 </p>
-        </footer>
-    </body>
+            </footer> 
+         <script src="../lesson4/js/currentdate.js"></script>
+      </body>
     <loom-container id="lo-engage-ext-container"></loom-container>
 </html>
