--- a/WDDAssignments/lesson4/preston-4.html
+++ b/WDDAssignments/lesson4/preston-4.html
@@ -5,6 +5,7 @@
         <title>Weather Wizard</title>
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"> 
         <meta name="description" content="Weather Wizard gives weekly forecasts.">
+       <link rel="shortcut icon" href="images/favicon.ico">
         <link rel="stylesheet" type="text/css" href="../lesson4/css/normalize.css">
         <link rel="stylesheet" type="text/css" href="../lesson4/css/small.css">
         <link rel="stylesheet" type="text/css" href="../lesson4/css/medium.css">
