--- a/WDDAssignments/Assignment3/typography.html
+++ b/WDDAssignments/Assignment3/typography.html
@@ -82,7 +82,7 @@ li a:hover {
         <li><a href="index.html">Home</a></li>
     	<li><a href="target-audience.html">Target Audience</a></li>
     	<li><a href="color-scheme.html">Color Scheme</a></li>
-    	<li><a href="typography.html">Springfield</a></li>
+    	<li><a href="typography.html">Typography</a></li>
             </ul>		
   </nav>
     
