--- a/WDDAssignments/lesson4/preston-4.html
+++ b/WDDAssignments/lesson4/preston-4.html
@@ -16,12 +16,13 @@
             <figure class="logo">
             <img src="../lesson4/images/stormCloud.png" alt="logo">
             </figure></a>
-        <h1>Weather Wizard | Forecasts and Family Fun!</h1>
-        <h2>We're here, rain or shine!</h2>
+        <h1>Weather Wizard</h1>
+        <h2>Forecasts and Family Fun!</h2>
+        <h3>We're here, rain or shine!</h3>
         </header>
         <nav class="clearfix">
             <button onclick="toggleMenu()">&#9776;</button>
-            <ul id="primaryNav" class="hide">
+            <ul id="primeNav" class="hide">
                 <li>
                   <a href="../Assignment3/index.html">Home</a>
                 </li>
@@ -69,7 +70,8 @@
              </span>
                 </p>
             </footer> 
-         <script src="../lesson4/js/currentdate.js"></script>
-      </body>
+         <script src="js/currentdate.js"></script>
+        <script src="js/hamburger.js"></script>
+        </body>
     <loom-container id="lo-engage-ext-container"></loom-container>
 </html>
