--- a/WDDAssignments/lesson4/preston-4.html
+++ b/WDDAssignments/lesson4/preston-4.html
@@ -24,22 +24,22 @@
             <button onclick="toggleMenu()">&#9776;</button>
             <ul id="primeNav" class="hide">
                 <li>
-                  <a href="../Assignment3/index.html">Home</a>
+                  <a href="Assignment3/index.html">Home</a>
                 </li>
                 <li>
-                  <a href="../lesson4/preston-4.html">Preston</a>
+                  <a href="lesson4/preston-4.html">Preston</a>
                 </li>
                 <li>
-                    <a href="../lesson4/preston-4.html">Soda Springs</a>
+                    <a href="lesson4/preston-4.html">Soda Springs</a>
                   </li>
                   <li>
-                    <a href="../lesson4/preston-4.html">Fish Haven</a>
+                    <a href="lesson4/preston-4.html">Fish Haven</a>
                   </li>
                   <li>
-                    <a href="../lesson4/preston-4.html">Storm Center</a>
+                    <a href="lesson4/preston-4.html">Storm Center</a>
                   </li>
                   <li>
-                    <a href="../lesson4/preston-4.html">Gallery</a>
+                    <a href="lesson4/preston-4.html">Gallery</a>
                   </li>
             </ul>
         </nav>
