--- a/WDDAssignments/lesson5/preston-5.html
+++ b/WDDAssignments/lesson5/preston-5.html
@@ -44,8 +44,17 @@
             </ul>
         </nav>
         <main>
-          <section class="section1">
+            <section class="weatherSum">
             <h2>Preston Idaho</h2>
+            <img id="townimg" src="/WDDAssignments/lesson5/images/franklinMED.jpeg" alt="stormy town">
+            <div id="boxtitle">Weather Summary</div>
+            <div class="contentbox">Currently: <span id="weather">Sunny</span></p>
+            <div class="contentbox">High: <span id="tempFah">65 F</span></p>
+            <div class="contentbox">Wind Chill: <span id="windC">62 F</span></p>
+            <div class="contentbox">Humidity: <span id="humid">15%</span></p>
+            <div class="contentbox">Wind Speed: <span id="windS">12 mph</span></p>
+            </section>
+            <section class="section1">
             <div class="contentLinks">
             <div class="contentbox">Hero w/ weather summary</div>
             <div class="contentbox">5 Day Forecast</div>
