--- a/WDDAssignments/lesson5 copy/preston-5.html
+++ b/WDDAssignments/lesson5 copy/preston-5.html
@@ -5,15 +5,15 @@
         <title>Weather Wizard</title>
         <meta name="viewport" content="width=device-width, initial-scale=1"> 
         <meta name="description" content="Weather Wizard gives weekly forecasts.">
-        <link rel="stylesheet" type="text/css" href=">lesson5 copy/css/normalize.css">
-        <link rel="stylesheet" type="text/css" href="../lesson5 copy/css/small.css">
-        <link rel="stylesheet" type="text/css" href="../lesson5 copy/css/medium.css">
-        <link rel="stylesheet" type="text/css" href="../lesson5 copy//css/large.css">
+        <link rel="stylesheet" type="text/css" href="/css/normalize.css">
+        <link rel="stylesheet" type="text/css" href="/css/small.css">
+        <link rel="stylesheet" type="text/css" href="/css/medium.css">
+        <link rel="stylesheet" type="text/css" href="/css/large.css">
     </head>
     <body class="vsc initalized">
-        <header class="clearfix"><a href="../lesson5 copy/preston-5.html">
+        <header class="clearfix"><a href="/preston-5.html">
             <figure class="logo">
-            <img src="../lesson5 copy/images/stormCloud.png" alt="logo">
+            <img src="/images/stormCloud.png" alt="logo">
             </figure></a>
             <section class="heading">
         <h1>Weather Wizard</h1>
@@ -25,29 +25,29 @@
             <a href="#" onclick="toggleMenu()">&#9776;</a>
              </li>
                 <li>
-                  <a href="lesson5/index.html">Home</a>
+                  <a href="/index.html">Home</a>
                 </li>
                 <li>
-                  <a href="lesson5 copy/preston-5.html" class="active">Preston</a>
+                  <a href="/preston-5.html" class="active">Preston</a>
                 </li>
                 <li>
-                    <a href="lesson5 copy/preston-5.html">Soda Springs</a>
+                    <a href="/preston-5.html">Soda Springs</a>
                   </li>
                   <li>
-                    <a href="lesson5 copy/preston-5.html">Fish Haven</a>
+                    <a href="/preston-5.html">Fish Haven</a>
                   </li>
                   <li>
-                    <a href="lesson5 copy/preston-5.html">Storm Center</a>
+                    <a href="/preston-5.html">Storm Center</a>
                   </li>
                   <li>
-                    <a href="lesson5 copy/preston-5.html">Gallery</a>
+                    <a href="/preston-5.html">Gallery</a>
                   </li>
             </ul>
         </nav>
         <main>
             <h2>Preston Idaho</h2>
             <section class="imgcontainer">
-            <img id="townimg" src="../lesson5 copy/images/franklinMED.jpeg" alt="stormy town">
+            <img id="townimg" src="/images/franklinMED.jpeg" alt="stormy town">
             <div class="weatherSum">
             <div id="boxtitle">Weather Summary</div>
             <div class="contentbox">Currently: <span id="weather">Sunny</span></p>
