--- a/WDDAssignments/lesson5final/preston-5.html
+++ b/WDDAssignments/lesson5final/preston-5.html
@@ -62,35 +62,37 @@
               <div class="forecast">
                 <div class="flex-col">
                   <span class="Day">MON</span>
-                  <img src="#" alt="sun">
+                  <img src="../lesson5final/images/sunny-SML.png" alt="sun">
                   <span class="temp">75&deg;</span>
                 </div>
                 <div class="flex-col">
                   <span class="Day">TUE</span>
-                  <img src="#" alt="sun">
+                  <img src="../lesson5final/images/sunny-SML.png" alt="sun">
                   <span class="temp">72&deg;</span>
                 </div>
                 <div class="flex-col">
                   <span class="Day">WED</span>
-                  <img src="#" alt="sun">
+                  <img src="../lesson5final/images/sunny-SML.png" alt="sun">
                   <span class="temp">78&deg;</span>
                 </div>
                 <div class="flex-col">
                   <span class="Day">THU</span>
-                  <img src="#" alt="sun">
+                  <img src="../lesson5final/images/sunny-SML.png" alt="sun">
                   <span class="temp">74&deg;</span>
                 </div>
                 <div class="flex-col">
                   <span class="Day">FRI</span>
-                  <img src="#" alt="sun">
+                  <img src="../lesson5final/images/sunny-SML.png" alt="sun">
                   <span class="temp">71&deg;</span>
                 </div>
               </div>
             </section>
             <div class="article">
               <h2>Weather Wonders</h2>
+              <br>
+              <br>
               <p>
-                <img src="#" alt="Weather Wonder">
+                <img src="../lesson5final/images/forked-bolt-SML.jpeg" alt="Weather Wonder">
                 "Lorem ipsum dolor sit amet consectetur adipisicing
         elit. Hic, perspiciatis. Placeat veniam quo, dolore optio autem doloribus distinctio et dicta totam fugit
         perferendis sit numquam vel qui alias quas debitis repellendus accusantium provident ex. Autem deserunt animi
@@ -120,17 +122,18 @@
                   "email"
                 </p>
                 <a class="socialmedia" target="_blank" href="https://www.facebook.com">
-                <img class="icon" src="#" alt="FB logo">
+                <img class="icon" src="../lesson5final/images/FBCrayon.png" alt="FB logo">
                 </a>
                 <a class="socialmedia" target="_blank" href="https://www.twitter.com">
-                  <img class="icon" src="#" alt="Twitter logo">
+                  <img class="icon" src="../lesson5final/images/TwitterCrayon.png" alt="Twitter logo">
                   </a>
                   <a class="socialmedia" target="_blank" href="https://www.youtube.com">
-                    <img class="icon" src="#" alt="YouTube logo">
+                    <img class="icon" src="../lesson5final/images/YTCrayon.png" alt="YouTube logo">
                     </a>
               </section>
            <p>
-             <img src="#" alt="Preston map">
+             <br>
+             <img src="../lesson5final/images/Preston-SML.jpg" alt="Preston map">
            </p>
             </div> 
         </main>
