--- a/WDDAssignments/lesson6/index.html
+++ b/WDDAssignments/lesson6/index.html
@@ -153,7 +153,6 @@ li a:hover {
 <section class="forecast">
 <h2>Forecast Details</h2>
  <div class="flex-container">
-<table>
 <tbody>
 <tr>
 <th>Summary</th>
@@ -259,6 +258,10 @@ document.write(today);
       
   </div>
 
+  <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>"
+<script>
+    WebFont.load({google: {families: ["Cuprum"]}});
+</script>
 </body>
      <script src="js/currentdate.js"></script>
     <script src="js/hamburger.js"></script>
