--- a/WDDAssignments/lesson6/preston-6.html
+++ b/WDDAssignments/lesson6/preston-6.html
@@ -21,7 +21,8 @@
         <div class="slogan">We're here, rain or shine!</div>
         </section>
       </header>
-        <nav class="navigation">
+        <nav class="navigation" id="primeNav">
+          <ul>
           <li>
             <a href="#" onclick="toggleMenu()">&#9776;</a>
              </li>
