--- a/WDDAssignments/lesson7/color-scheme.html
+++ b/WDDAssignments/lesson7/color-scheme.html
@@ -7,10 +7,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1"> 
 <meta name="author" content="Logan Pierce">
 <meta name="description" content="Weather Wizard gives forecasts for Franklin, Greenville and Springfield.">
-<link rel="stylesheet" type="text/css" href="../lesson6/css/normalize.css">
-<link rel="stylesheet" type="text/css" href="../lesson6/css/small.css">
-<link rel="stylesheet" type="text/css" href="../lesson6/css/medium.css">
-<link rel="stylesheet" type="text/css" href="../lesson6/css/large.css">
+<link rel="stylesheet" type="text/css" href="../lesson7/css/normalize.css">
+<link rel="stylesheet" type="text/css" href="../lesson7/css/small.css">
+<link rel="stylesheet" type="text/css" href="../lesson7/css/medium.css">
+<link rel="stylesheet" type="text/css" href="../lesson7/css/large.css">
 <style>
     .flex-container {
         display: flex;
@@ -90,8 +90,8 @@ li a:hover {
       <div class="wrapper">
           
     <div class="item1"></div>
-    <h1>Typography</h1>
-        <p>“Calibri” It’s easy on the eyes and readable at nearly any size.</p>
+    <h1>Color Scheme</h1>
+        <p>White background (#f1f1f1), with Light Blue (rbg 240,255,255) accents.</p>
             </div>
           
 <section class="forecast">
