--- a/WDDAssignments/lesson7/lazyload.html
+++ b/WDDAssignments/lesson7/lazyload.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
     <head>
         <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, maximun-scale=5">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Lazy Load Assignment</title>
         <meta name="description" content="Lazy Load Assignment - Week 07">
         <link rel="stylesheet" type="text/css" href="../lesson7/lazyload/css/normalize.css">
@@ -10,27 +10,27 @@
     </head>
     <body class="vsc-initialized">
         <main>
-            <div class="center">
+            <div class="centered">
                 <h1>Lazy Loader</h1>
                 <picture>
-                    <img src="../lesson7/lazyload/images/Running.png" alt="Running">
+                    <img src="../lesson7/lazyload/images/Intermission.jpg" data-src="../lesson7/lazyload/images/Running.png" alt="Running">
                 </picture>
                 <picture>
-                    <img src="../lesson7/lazyload/images/Looking.png" alt="Looking">
+                    <img img src="../lesson7/lazyload/images/Intermission.jpg" data-src="../lesson7/lazyload/images/Looking.png" alt="Looking">
                 </picture>
                 <picture>
-                    <img src="../lesson7/lazyload/images/MoreLooking.png" alt="More Looking">
+                    <img img src="../lesson7/lazyload/images/Intermission.jpg" data-src="../lesson7/lazyload/images/MoreLooking.png" alt="More Looking">
                 </picture>
                 <picture>
-                    <img src="../lesson7/lazyload/images/MoreRunning.png" alt="More Running">
+                    <img img src="../lesson7/lazyload/images/Intermission.jpg" data-src="../lesson7/lazyload/images/MoreRunning.png" alt="More Running">
                 </picture>
                 <picture>
-                    <img src="../lesson7/lazyload/images/Aha.png" alt="Aha!">
+                    <img img src="../lesson7/lazyload/images/Intermission.jpg" data-src="../lesson7/lazyload/images/Aha.png" alt="Aha!">
                 </picture>
                 <picture>
-                    <img src="../lesson7/lazyload/images/Intermission.jpg" data-src="../lesson7/lazyload/images/Hey.png" alt="Hey.">
+                    <img img src="../lesson7/lazyload/images/Intermission.jpg" data-src="../lesson7/lazyload/images/Hey.png" alt="Hey.">
                 </picture>
             </div>
         </main>
-        <script src="js/imageloader.js"></script>
+        <script src="../lesson7/lazyload/js/imageloader.js"></script>
     </body>
