--- a/WDDAssignments/lesson7/lazyload.html
+++ b/WDDAssignments/lesson7/lazyload.html
@@ -16,19 +16,19 @@
                     <img src="../lesson7/lazyload/images/Intermission.jpg" data-src="../lesson7/lazyload/images/Running.png" alt="Running">
                 </picture>
                 <picture>
-                    <img img src="../lesson7/lazyload/images/Intermission.jpg" data-src="../lesson7/lazyload/images/Looking.png" alt="Looking">
+                    <img src="../lesson7/lazyload/images/Intermission.jpg" data-src="../lesson7/lazyload/images/Looking.png" alt="Looking">
                 </picture>
                 <picture>
-                    <img img src="../lesson7/lazyload/images/Intermission.jpg" data-src="../lesson7/lazyload/images/MoreLooking.png" alt="More Looking">
+                    <img src="../lesson7/lazyload/images/Intermission.jpg" data-src="../lesson7/lazyload/images/MoreLooking.png" alt="More Looking">
                 </picture>
                 <picture>
-                    <img img src="../lesson7/lazyload/images/Intermission.jpg" data-src="../lesson7/lazyload/images/MoreRunning.png" alt="More Running">
+                    <img src="../lesson7/lazyload/images/Intermission.jpg" data-src="../lesson7/lazyload/images/MoreRunning.png" alt="More Running">
                 </picture>
                 <picture>
-                    <img img src="../lesson7/lazyload/images/Intermission.jpg" data-src="../lesson7/lazyload/images/Aha.png" alt="Aha!">
+                    <img src="../lesson7/lazyload/images/Intermission.jpg" data-src="../lesson7/lazyload/images/Aha.png" alt="Aha!">
                 </picture>
                 <picture>
-                    <img img src="../lesson7/lazyload/images/Intermission.jpg" data-src="../lesson7/lazyload/images/Hey.png" alt="Hey.">
+                    <img src="../lesson7/lazyload/images/Intermission.jpg" data-src="../lesson7/lazyload/images/Hey.png" alt="Hey.">
                 </picture>
             </div>
         </main>
