--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     <li><p>Lesson 4: <a href="https://tienut73.github.io/WDDAssignments/lesson4/preston-4.html">Assignment Preston 4 Link</a></p></li>
     <li><p>Lesson 5: <a href="https://tienut73.github.io/WDDAssignments/lesson5final/preston-5.html">Assignment Preston 5 Link</a></p></li>
     <li><p>Lesson 6: <a href="https://tienut73.github.io/WDDAssignments/lesson6/preston-6.html">Assignment Preston 6 Link</a></p></li>
-    <li><p>Lesson 7: <a href="https://tienut73.github.io/WDDAssignments/lesson7/preston-7.html">Assignment Preston 7 Link</a></p></li>
-
+    <li><p>Lesson 7: <a href="https://tienut73.github.io/WDDAssignments/lesson7/lazyload.html">Lazy Load Assignment</a> | <a href="https://tienut73.github.io/WDDAssignments/lesson7/preston-7.html">Assignment Gallery</a></p></li>
+    <li><p>Lesson 8: <a href="https://tienut73.github.io/WDDAssignments/lesson7/preston-7.html">TBA</a></p></li>
 
     </ul>
 </nav>
