--- a/WDDAssignments/lesson8/tablebuild.html
+++ b/WDDAssignments/lesson8/tablebuild.html
@@ -10,7 +10,7 @@
                  box-shadow: 5px 10px #888888;
     }
     table, th, td {          
-        border: 1px solid: gray;
+        border: 1px solid gray;
   }
 </style>
 <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Ubuntu" />
